[bdist_wheel]
python-tag = py36

[metadata]
license_file = LICENSE

[flake8]
ignore =
  E203,
  E266,
  E501,
  W503,
max-line-length = 80
max-complexity = 18
mypy_config=setup.cfg
select = A,B,C,E,F,W,Y

exclude =
  .git,
  __pycache__,
  build,
  dist,
  .cache,
  .venv,
  .ropeproject,
  .mypy_cache,

[isort]
combine_as_imports=True
default_section=THIRDPARTY
force_grid_wrap=0
include_trailing_comma=True
known_first_party=matomo_dl
line_length=88
multi_line_output=3
no_lines_before=LOCALFOLDER
not_skip=__init__.py

skip=
  .git,
  __pycache__,
  build,
  dist,
  .cache,
  .venv,
  .ropeproject,
  .mypy_cache,

[black]
line-length = 88
py36 = true

[mypy]
python_version=3.6
platform=linux

show_column_numbers=True
follow_imports=normal
ignore_missing_imports=True

disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True

# disallow_untyped_defs=True
# check_untyped_defs=True
